--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_homecredit_logo"
         android:label="@string/app_name"
@@ -25,7 +26,7 @@
             android:name=".Activities.CreditsActivity"
             android:label="@string/title_activity_credits"
             android:parentActivityName=".Activities.MainActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
