--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".App"
+        android:name=".Utils.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_homecredit_logo"
         android:label="@string/app_name"
