--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
         <activity
             android:name=".Activities.CreditsActivity"
-            android:label="@string/title_activity_credits"
+            android:label="@string/creditsTitle"
             android:parentActivityName=".Activities.MainActivity"
             android:theme="@style/AppTheme" />
     </application>
